--- a/app/src/main/res/drawable/radio_selected_premium.xml
+++ b/app/src/main/res/drawable/radio_selected_premium.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E4FFF2"/>
+    <solid android:color="#E9E3FF"/>
     <corners android:radius="16dp"/>
     <stroke
         android:width="3dp"
-        android:color="@color/normal_green"/>
+        android:color="@color/accent_purple"/>
 </shape>
