--- a/app/src/main/res/layout/shop_item_row.xml
+++ b/app/src/main/res/layout/shop_item_row.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="12dp">
 
     <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
         android:gravity="center"
         android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:scaleType="centerCrop"
             tools:src="@drawable/daisy"/>
 
         <LinearLayout
