feat: setup journaling

--- a/app/src/main/res/layout/fragment_journaling_four.xml
+++ b/app/src/main/res/layout/fragment_journaling_four.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/accent_white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.journal.screen.JournalingFourFragment">
 
@@ -76,6 +77,7 @@
             android:inputType="textMultiLine"
             android:textSize="14sp"
             tools:ignore="SpeakableTextPresentCheck" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.cpp.unsmoke.utils.customview.CustomButton
